finished logic decrement minutes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="row">
             <!-- <h2 id="minutes" class="col display-1"></h2> -->
             <div id="input">
+                <!-- <h2 id="minutes"></h2> -->
                 <input type="number" id="input-minutes" size="100"/></div>
             <h2 class="col display-1">:</h2>
             <h2 id="seconds" class="col display-1"></h2>
