fix: functions adjusted for more than one occasion

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 
     <div class="container w-25" id="container-timer">
         <div class="row">
-            <!-- <h2 id="minutes" class="col display-1"></h2> -->
-            <div id="input">
-                <!-- <h2 id="minutes"></h2> -->
-                <input type="number" id="input-minutes" size="100"/></div>
+            <div class="div-input" id="container-minutes">
+                <input type="number" id="input-minutes"/></div>
             <h2 class="col display-1">:</h2>
-            <h2 id="seconds" class="col display-1"></h2>
+            <div class="div-input" id="container-seconds">
+                <input type="number" id="input-seconds"/></div>
         </div>
     </div>
 
