--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Pomodoro Timer</title>
+    <title>Stopwatch</title>
 </head>
-<!-- onload="template()" -->
+    <!-- onload="template()" -->
 <body  class="container bg-light text-center">
-    <h1>Pomodoro timer</h1>
+    <h1>Stopwatch</h1>
 
     <div class="container w-25" id="container-timer">
-        <div class="row">
-            <div class="div-input" id="container-minutes">
-                <input type="number" id="input-minutes"/></div>
-            <h2 class="col display-1">:</h2>
-            <div class="div-input" id="container-seconds">
-                <input type="number" id="input-seconds"/></div>
-        </div>
+        <div class="div-input" id="container-minutes">
+            <input type="number" id="input-minutes"/></div>
+        <h2 class="col display-1">:</h2>
+        <div class="div-input" id="container-seconds">
+            <input type="number" id="input-seconds"/></div>
     </div>
 
     <div class="btn-group-lg">
