feat: added input condicionally at 0 to 59

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <div class="container w-25" id="container-timer">
         <div class="div-input" id="container-minutes">
-            <input type="number" id="input-minutes"/></div>
+            <input type="number" id="input-minutes" min="0" max="59"/></div>
         <h2 class="col display-1">:</h2>
         <div class="div-input" id="container-seconds">
-            <input type="number" id="input-seconds"/></div>
+            <input type="number" id="input-seconds" min="0" max="59"/></div>
     </div>
 
     <div class="btn-group-lg">
