--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="btn-group-lg">
         <button class="btn btn-primary" onclick="start()">Start</button>
-        <button class="btn btn-primary" onclick="template()">Reset</button>
+        <button class="btn btn-primary" onclick="reset()">Reset</button>
         <button class="btn btn-primary" onclick="stopp()">Stop</button>    
     </div>
 
