feat: created and added logic stop and reset

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="btn-group-lg">
         <button class="btn btn-primary" onclick="start()">Start</button>
         <button class="btn btn-primary" onclick="reset()">Reset</button>
-        <button class="btn btn-primary" onclick="stopp()">Stop</button>    
+        <button class="btn btn-primary" onclick="stop()">Stop</button>    
     </div>
 
     <script src="script.js"></script>
